--- a/mails/en/order_conf.html
+++ b/mails/en/order_conf.html
@@ -460,7 +460,7 @@
                                                         </tr>
                                                         <tr class="order_summary">
                                                             <td bgcolor="#FDFDFD" colspan="3" align="right" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-family: Open sans, Arial, sans-serif; background-color: #FDFDFD; color: #353943; font-weight: 600; font-size: 14px; padding: 10px; border: 1px solid #DFDFDF;">
-                                                                Payment fee
+                                                                {payment_fee_label}
                                                             </td>
                                                             <td bgcolor="#FDFDFD" colspan="3" style="border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; font-family: Open sans, Arial, sans-serif; background-color: #FDFDFD; color: #353943; font-weight: 600; font-size: 14px; padding: 10px; border: 1px solid #DFDFDF;"> {payment_fee} </td>
                                                         </tr>
